test/src/e2e_vm_tests/test_programs/Should_succeed/language/main_returns_unit/src/main.sw
script;

fn ten() -> u64 {
    10
}

fn nop() {
    ten();
}

fn main() {
    nop()
}
