test/src/e2e_vm_tests/test_programs/should_fail/while_implicit_ret/src/main.sw
script;

fn main() -> u64 {
    while true {
        true
    }
}
